--- a/public/css/style.css
+++ b/public/css/style.css
@@ -153,7 +153,7 @@ color: #fff;
 
 .link{
 	padding:15px 35px;
-	background:#243d42;;
+	background:#bd8a3c;
 	color:#fff !important;
 	font-size:16px;
 	font-weight:400;
@@ -169,18 +169,18 @@ color: #fff;
 }
 .link:hover {
 	text-decoration:none;
-	color:#7cc576 !important;
+	color:#134f4b !important;
 	background:#fff;
 }
 
 .link:active, .link:focus {
-	background: #7cc576;
+	background: #134f4b;
 	text-decoration:none;
 	color:#fff !important;
 }
 .link2{
 	padding:15px 35px;
-	background:black;
+	background:#bc8b3c;
 	color:#fff !important;
 	font-size:16px;
 	font-weight:400;
