--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1897,3 +1897,43 @@ form label {
     margin-top: 0em;
   }
 }
+.contCircularBtn{
+  float:left;
+  margin:10px;
+}
+.circularBtn{
+   width: 130px; 
+   height: 130px; 
+   background: black; 
+   border-radius: 50%; 
+   text-align: center; 
+   line-height: 20px; 
+   font-size: 14px;     
+   padding-top: 50px; color: white;
+   border:3px solid black;
+   -webkit-transition: border-color 1s ease;
+  -moz-transition: border-color 1s ease;
+  -o-transition: border-color 1s ease;
+  -ms-transition: border-color 1s ease;
+  transition: border-color 1s ease;
+  
+  -webkit-transition: background 1s ease;
+  -moz-transition: background 1s ease;
+  -o-transition: background 1s ease;
+  -ms-transition: background 1s ease;
+  transition: background 1s ease;
+  
+  
+  
+}
+.circularBtn:hover{
+   width: 130px; 
+   height: 130px; 
+   background: white; 
+   border-radius: 50%; 
+   text-align: center; 
+   line-height: 20px; 
+   font-size: 14px;     
+   padding-top: 50px; color: black;
+   border:2px solid gray;
+}
