bg color imagen banner

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -242,7 +242,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 #gtco-header {
-  background: #fdd035;
+  background: #fff;
 }
 @media screen and (max-width: 768px) {
   #gtco-header.gtco-cover {
