--- a/public/css/style.css
+++ b/public/css/style.css
@@ -107,6 +107,9 @@ h1, h2, h3, h4, h5, h6, figure {
   padding: 20px 0;
   z-index: 1001;
 }
+.size-logo{
+  width: 25%;
+}
 @media screen and (max-width: 768px) {
   .gtco-nav {
     padding: 20px 0;
@@ -248,6 +251,9 @@ h1, h2, h3, h4, h5, h6, figure {
   #gtco-header.gtco-cover {
     height: inherit !important;
     padding: 3em 0 !important;
+  }
+  .size-logo{
+    width: 50%;
   }
 }
 @media screen and (max-width: 480px) {
