--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,6 +110,16 @@ h1, h2, h3, h4, h5, h6, figure {
 .size-logo{
   width: 25%;
 }
+.style_cont_row{
+  width:900px; 
+  height:600px;
+  margin:0 auto;
+}
+.style_cont_row_item{
+  width:50%;
+  height:600px; 
+  float:left;
+}
 @media screen and (max-width: 768px) {
   .gtco-nav {
     padding: 20px 0;
