--- a/public/css/style.css
+++ b/public/css/style.css
@@ -130,13 +130,13 @@ h1, h2, h3, h4, h5, h6, figure {
     padding: 20px 0;
   }
   .style_cont_row{
-  width:100%px; 
-  height:600px;
+  width:100%; 
+  height:auto;
   margin:0 auto;
 }
 .style_cont_row_item{
-  width:50%;
-  height:600px; 
+  width:100%;
+  height:auto; 
   float:left;
 }
 .btnDescarga{
