--- a/public/css/style.css
+++ b/public/css/style.css
@@ -133,6 +133,7 @@ h1, h2, h3, h4, h5, h6, figure {
   width:100%; 
   height:auto;
   margin:0 auto;
+  padding: 20px;
 }
 .style_cont_row_item{
   width:100%;
